--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -9,6 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
+    <style>.label-profile{
+      width: 117px;
+      padding-top: 7px;
+    height: 35px;
+    flex-shrink: 0;
+    background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+    text-align-last: center;
+    }</style>
 </head>
 <body>
   <%- include('navbar') %>
@@ -29,8 +37,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Name Job</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="name_job"  name="name_job" />
+                  <div class="col-sm-7">
+                    <input type="text" id="name_job"  name="name_job" class="form-control"/>
                   </div>
                 </div>
                 <hr>
@@ -38,8 +46,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Role</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="role" name= "role" />
+                  <div class="col-sm-7">
+                    <input type="text" id="role" name= "role" class="form-control"/>
                   </div>
                 </div>
                 <hr>
@@ -47,8 +55,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Detail Work</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="detail_work"  name="detail_work"  />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="detail_work"  name="detail_work" class="form-control" rows="4"></textarea>
                   </div>
                 </div>
                 <hr>
@@ -56,8 +64,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Experience</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="experience" name= "experience" />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="experience" name= "experience" class="form-control" rows="4" ></textarea>
                   </div>
                 </div>
                 <hr>
@@ -65,8 +73,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Gender</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="gender"  name="gender"  />
+                  <div class="col-sm-7">
+                    <input type="text" id="gender"  name="gender" class="form-control" />
                   </div>
                 </div>
                 <hr>
@@ -74,8 +82,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Education</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="education" name= "education" />
+                  <div class="col-sm-7">
+                    <input type="text" id="education" name= "education" class="form-control"/>
                   </div>
                 </div>
                 <hr>
@@ -83,8 +91,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Welfare</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="welfare"  name="welfare"  />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="welfare"  name="welfare"  class="form-control" rows="4"></textarea>
                   </div>
                 </div>
                 <hr>
@@ -92,8 +100,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Salary</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="salary"  name="salary"  />
+                  <div class="col-sm-7">
+                    <input type="text" id="salary"  name="salary" class="form-control" />
                   </div>
                 </div>
                 <hr>
@@ -101,8 +109,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Workday</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="workday" name= "workday" />
+                  <div class="col-sm-7">
+                    <input type="text" id="workday" name= "workday"class="form-control" />
                   </div>
                 </div>
                 <hr>
@@ -110,8 +118,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Day Off</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="day_off"  name="day_off"  />
+                  <div class="col-sm-7">
+                    <input type="text" id="day_off"  name="day_off" class="form-control" />
                   </div>
                 </div>
                 <hr>
@@ -119,8 +127,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Deadline Offer</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="datetime-local" id="deadline_offer" name= "deadline_offer"/>
+                  <div class="col-sm-7">
+                    <input type="datetime-local" id="deadline_offer" name= "deadline_offer" class="form-control"/>
                   </div>
                 </div>
                 <hr>
