--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -7,38 +7,100 @@
     <title>registerUser</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<style>.label-profile{
+  width: 117px;
+  padding-top: 7px;
+height: 35px;
+flex-shrink: 0;
 
+background: linear-gradient(180deg, #cbb6d5 0%, rgba(106, 64, 64, 0.00) 100%);
+text-align-last: center;
+}</style>
 </head>
 <body>
   <!-- คิดว่าหน้านี้จะใช้สำหรับโชว์รายละเอียดและใส่เงื่อนไขเข้าไปเพื่ออัพเดต -->
   <%- include('navbar') %>
   
   <% if(user) { %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.salary %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-    ชื่องาน : <%= job.name_job %>
-  <form action="/user/apply/<%= user.id_user %>/<%= job.idjob_company %>" method="post">
 
-  <div class="inputbox-regis">
-      <input type="hidden" id="id_user"  name="id_user"  value="<%= user.id_user %>"/>
-     
+    <div class="container-fluid bg-dark">
+          
+      <div class="row" style="justify-content:center ; ">
+        <div class="container py-5 h-100" style="margin-left:15vh ;">
+          <p class="label-profile text-white-50" >Detail</p>
+        </div>
+
+            <div class="row" style="justify-content:center ; ">
+
+              <div class="col-3 p-4 border bg-light" style="margin-top:1vh ;">
+
+                <div class="card  text-center" style="width: 15rem;">
+                  <img class="card-img-top" src="/image/<%= job.image %>" alt="Card image cap">
+                  <div class="card-body">
+
+                    <p class="card-text">
+                      <%= job.name_company %>
+                    </p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-sm-8 p-4 border bg-light " style="margin-top:1vh ;" >
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <%= job.name_job %>
+                    </h5>
+                    <p class="card-text">
+                      <%= job.detail_work %>
+                    </p>
+                    <a class="card-title">
+                      <%= job.deadline_offer %>
+                    </a>
+                    
+                    <form action="/user/apply/<%= user.id_user %>/<%= job.idjob_company %>" method="post">
+
+                      <div class="inputbox-regis">
+                          <input type="hidden" id="id_user"  name="id_user"  value="<%= user.id_user %>"/>
+                         
+                        </div>
+                        <div class="inputbox-regis">
+                         
+                         <ion-icon name="mail-outline"></ion-icon>
+                         <input type="hidden" id="idjob_company" name= "idjob_company" value="<%= job.idjob_company %>" />
+                        
+                          </div>       
+                                
+                            <button type="submit" class="btn btn-outline-primary" style="margin-left: 50vh;" data-mdb-ripple-color="dark">save</button> 
+                        
+                          </form> 
+                   
+                    
+                  </div>
+                </div>
+                <!-- </div> -->
+              </div>
+            </div>
+            <div class="row" style="justify-content:center ; margin-top: 5vh;">
+
+              <div class="container-fluid" style="margin-left:15vh ;">
+                <p class="label-profile text-white-50">งาน</p>
+              
+                <div class="col-md-10  border bg-light text-black" style="margin-top: 10vh;">
+  
+                ชื่องาน : <%= job.salary %>
+                ชื่องาน : <%= job.role %>
+                ชื่องาน : <%= job.gender%>
+                
+                </div>
+              </div>
+              
+
+               
+            </div>
+      </div>
     </div>
-    <div class="inputbox-regis">
-     
-     <ion-icon name="mail-outline"></ion-icon>
-     <input type="hidden" id="idjob_company" name= "idjob_company" value="<%= job.idjob_company %>" />
-    
-      </div>       
-            
-        <button type="submit" class="btn btn-wanning">save</button> 
-    
-      </form> 
       <% } else { %>
         ชื่องาน : <%= job.name_job %>
         ชื่องาน : <%= job.salary %>
