--- a/views/profilecompany.ejs
+++ b/views/profilecompany.ejs
@@ -40,7 +40,7 @@ width: 117px;
 padding-top: 7px;
 height: 35px;
 flex-shrink: 0;
-background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
 text-align-last: center;
 }
 .input-mid{
