--- a/views/updatejob.ejs
+++ b/views/updatejob.ejs
@@ -9,6 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
+    <style>.label-profile{
+      width: 117px;
+      padding-top: 7px;
+    height: 35px;
+    flex-shrink: 0;
+    background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+    text-align-last: center;
+    }</style>
+    
 </head>
 <body>
   
@@ -32,8 +41,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Name Job</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="name_job"  name="name_job"  value="<%= job.name_job %>"/>
+                  <div class="col-sm-7">
+                    <input type="text" id="name_job"  name="name_job" class="form-control" value="<%= job.name_job %>"/>
                   </div>
                 </div>
                 <hr>
@@ -41,8 +50,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Role</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="role" name= "role" value="<%= job.role %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="role" name= "role"  class="form-control" value="<%= job.role %>" />
                   </div>
                 </div>
                 <hr>
@@ -50,8 +59,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Detail Work</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="detail_work"  name="detail_work" value="<%= job.detail_work %>" />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="detail_work"  name="detail_work" class="form-control" rows="4" ><%= job.detail_work %></textarea>
                   </div>
                 </div>
                 <hr>
@@ -59,8 +68,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Experience</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="experience" name= "experience"value="<%= job.experience %>" />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="experience" name= "experience" class="form-control" rows="4"><%= job.experience %></textarea>
                   </div>
                 </div>
                 <hr>
@@ -68,8 +77,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Gender</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="gender"  name="gender" value="<%= job.gender %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="gender"  name="gender" class="form-control" value="<%= job.gender %>" />
                   </div>
                 </div>
                 <hr>
@@ -77,8 +86,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Education</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="education" name= "education"value="<%= job.education %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="education" name= "education" class="form-control" value="<%= job.education %>" />
                   </div>
                 </div>
                 <hr>
@@ -86,8 +95,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Welfare</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="welfare"  name="welfare" value="<%= job.welfare %>" />
+                  <div class="col-sm-7">
+                    <textarea type="text" id="welfare"  name="welfare" class="form-control" rows="4"  ><%= job.welfare %></textarea>
                   </div>
                 </div>
                 <hr>
@@ -95,8 +104,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Salary</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="salary"  name="salary" value="<%= job.salary %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="salary"  name="salary" class="form-control" value="<%= job.salary %>" />
                   </div>
                 </div>
                 <hr>
@@ -104,8 +113,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Workday</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="workday" name= "workday"value="<%= job.workday %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="workday" name= "workday" class="form-control"value="<%= job.workday %>" />
                   </div>
                 </div>
                 <hr>
@@ -113,8 +122,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Day Off</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="text" id="day_off"  name="day_off" value="<%= job.day_off %>" />
+                  <div class="col-sm-7">
+                    <input type="text" id="day_off"  name="day_off"  class="form-control"value="<%= job.day_off %>" />
                   </div>
                 </div>
                 <hr>
@@ -122,8 +131,8 @@
                   <div class="col-sm-3">
                     <p class="mb-0">Deadline Offer</p>
                   </div>
-                  <div class="col-sm-9">
-                    <input type="datetime-local" id="deadline_offer" name= "deadline_offer"value="<%= job.deadline_offer %>" />
+                  <div class="col-sm-7">
+                    <input type="datetime-local" id="deadline_offer" name= "deadline_offer" class="form-control" value="<%= job.deadline_offer %>" />
                   </div>
                 </div>
                 <hr>
