--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -72,7 +72,7 @@
                     <div class="row pt-1">
                       <div class="col-6 mb-3">
                         <h6>Email</h6>
-                        <input type="email" name="email" id="email" />
+                        <input type="text" name="email" id="email" />
                       </div>
                       <div class="row pt-1">
                         <div class="col-6 mb-3">
