--- a/views/companymanagement.ejs
+++ b/views/companymanagement.ejs
@@ -11,6 +11,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -65,6 +67,14 @@
               </div>
             </td>
             <td class="align-middle text-center">
+              <div class="d-flex align-items-center form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="status-toggle-<%= company.id_company%>"
+                  <%=company.status==='active' ? 'checked' : '' %> onchange="toggleStatus('<%= company.id_company %>')">
+
+
+              </div>
+            </td>
+            <!-- <td class="align-middle text-center">
               <div class="d-flex align-items-center">
                 <form action="/admin/bancompany/<%= company.id_company %>" method="post">
                   <input type="hidden" name="id" value="<%= company.id_company %>">
@@ -80,9 +90,44 @@
                 </form>
               </div>
             </td>
-            
+             -->
   
           
+
+             <script>
+              var companyStatus = '<%= company.status %>';
+
+              if (companyStatus === 'active') {
+                var toggleCheckbox = document.getElementById('status-toggle-<%= company.id_company %>');
+                toggleCheckbox.checked = true;
+              }
+
+              // const banForm = document.getElementById("banForm");
+              // const unbanForm = document.getElementById("unbanForm");
+              function toggleStatus(companyId) {
+                var toggleCheckbox = document.getElementById('status-toggle-' + companyId);
+                var classStatus = toggleCheckbox.checked ? 'active' : 'banned';
+
+                console.log('classStatus:', classStatus);
+
+                // Make AJAX request to update class status
+                $.ajax({
+                  url: "/admin/updatecompanyStatus/" + companyId, // Update the AJAX URL
+                  method: 'POST',
+                  data: {
+                    companyId: companyId, // Pass userId ID
+                    status: classStatus
+                  },
+                  success: function (response) {
+                    console.log('สถานะของคลาสถูกอัปเดตแล้ว');
+                    location.reload();
+                  },
+                  error: function (xhr, status, error) {
+                    console.error('เกิดข้อผิดพลาดในการอัปเดตสถานะของคลาส:', error);
+                  }
+                });
+            }
+            </script>
   
           <% }); %>
         </tbody>
