--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -41,7 +41,7 @@
   padding-top: 7px;
 height: 35px;
 flex-shrink: 0;
-background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+background: #f6d365;
 text-align-last: center;
 }
 .input-mid{
@@ -132,11 +132,11 @@ text-align-last: center;
   </section>
 </form> -->
 
-<section style="background-color: #eeeeee;">
+<section style="background-color: #eeeeee; height: 100vh;">
 <form   action="/user/updateprofile/<%= user.id_user %>" method="post" enctype="multipart/form-data">
 
     <div class="container py-5 h-100">
-      <p class="label-profile">Profile</p>
+      <p class="label-profile"><b>Profile</b></p>
       <div class="row d-flex justify-content-center align-items-center h-100 ">
         <div class="col col-lg-6 mb-4 mb-lg-0 ">
           <div class="card mb-3" style="border-radius: .5rem;">
