--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -17,7 +17,7 @@
       padding-top: 7px;
     height: 35px;
     flex-shrink: 0;
-    background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+   background: #f6d365;
     text-align-last: center;
     }
     .gradient-custom {
