--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -11,90 +11,134 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-<style>
-    .label-profile{
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
+  <style>
+    .label-profile {
       width: 117px;
       padding-top: 7px;
-    height: 35px;
-    flex-shrink: 0;
-    background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
-    text-align-last: center;
+      height: 35px;
+      flex-shrink: 0;
+      background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+      text-align-last: center;
     }
+
     .gradient-custom {
       /* fallback for old browsers */
       background: #f6d365;
-      
+
       /* Chrome 10-25, Safari 5.1-6 */
       background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
-      
+
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
-      
-      }
-    </style>
+    }
+  </style>
 </head>
+<script>
+  var passConfirm = function () {
+    if (document.getElementById("password").value ==
+      document.getElementById("confirmpassword").value) {
+      document.getElementById("Message").style.color = "Green";
+      document.getElementById("Message").innerHTML = "Passwords match!"
+    } else {
+      document.getElementById("Message").style.color = "Red";
+      document.getElementById("Message").innerHTML = "Passwords do NOT match!"
+    }
+  }  
+</script>
 
 <body>
 
   <%- include('navbar') %>
 
 
-  <section style="background-color: #eeeeee;">
-    <form action="/user/registeruser" method="post" enctype="multipart/form-data">
-    
-        <div class="container py-5 h-100">
-          <p class="label-profile">Register</p>
-          <div class="row d-flex justify-content-center align-items-center h-100 ">
-            <div class="col col-lg-6 mb-4 mb-lg-0 ">
-              <div class="card mb-3" style="border-radius: .5rem;">
-                <div class="row g-0">
-                  <div class="col-md-5 gradient-custom text-center text-white"
-                    style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                    <img id="imagePreview" src="/image/default.png"alt="Avatar" class="img-fluid my-5 rounded-circle" style="width: 100px; height: 100px;" />
-                    <input type="file" id="image" name="image" accept="image/*" onchange="displayImage(event)">
-                    
-                    
-                    
-                     <button type="submit" class="btn btn-colorless ">
-                      <i class="far fa-edit"></i> Submit
-                    </button>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="card-body p-4">
-                      <h6>Information</h6>
-                      <hr class="mt-0 mb-4">
-                      <div class="row pt-1">
-                        <div class="col-6 mb-3 ">
-                          <h6>Username</h6>
-                          <input type="text" name="username" id="username" />
-                        </div>
-                    </div>
-                    <div class="row pt-1">
-                      <div class="col-6 mb-3">
-                        <h6>Email</h6>
-                        <input type="text" name="email" id="email" />
-                      </div>
-                      <div class="row pt-1">
-                        <div class="col-6 mb-3">
-                          <h6>Password</h6>
-                          <input type="password" name="password" id="password" />
-                        </div>
-                        <div class="row pt-1">
-                          <div class="col-6 mb-3">
-                            <h6>Confirm Password</h6>
-                            <input type="password" name="confirm_password" id="password" />
+    <% if(locals.errors){ %>
+      <% Object.values(errors).forEach(function(error){%>
+        <script type="text/javascript">
+          Swal.fire({
+            title: "<%= error.msg || errors  %>",
+            icon: 'warning',
+          })
+        </script>
+        <%})%>
+          <%} else if (locals.success) { %>
+            <script type="text/javascript">
+              Swal.fire({
+                title: "<%= success  %>",
+                icon: 'success',
+              })
+            </script>
+            <%}%>
+
+
+              <section style="background-color: #eeeeee;">
+                <form action="/user/registeruser" method="post" enctype="multipart/form-data">
+
+                  <div class="container py-5 h-100">
+                    <p class="label-profile">Register</p>
+                    <div class="row d-flex justify-content-center align-items-center h-100 ">
+                      <div class="col col-lg-6 mb-4 mb-lg-0 ">
+                        <div class="card mb-3" style="border-radius: .5rem;">
+                          <div class="row g-0">
+                            <div class="col-md-5 gradient-custom text-center text-white"
+                              style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                              <img id="imagePreview" src="/image/default.png" alt="Avatar"
+                                class="img-fluid my-5 rounded-circle" style="width: 100px; height: 100px;" />
+                              <input type="file" id="image" name="image" accept="image/*"
+                                onchange="displayImage(event)">
+
+
+
+                              <button type="submit" class="btn btn-colorless ">
+                                <i class="far fa-edit"></i> Submit
+                              </button>
+                            </div>
+                            <div class="col-md-5">
+                              <div class="card-body p-4">
+                                <h6>Information</h6>
+                                <hr class="mt-0 mb-4">
+                                <div class="row pt-1">
+                                  
+                                    <h6>Username</h6>
+                                    <input type="text" name="username" class="form-control ms-2" id="username" />
+                                 
+                                </div>
+
+
+                                <div class="row pt-1">
+                                  
+                                    <h6>Email</h6>
+                                    <input type="text" name="email"  class="form-control ms-2"id="email" />
+
+                                </div>
+
+                                  <div class="row pt-1">
+
+                                    <h6>Password</h6>
+                                    <input type="password" name="password" id="password"  class="form-control ms-2  " 
+                                      placeholder="New Password" onkeyup='passConfirm();' />
+                                    <small id="message" style="color:red"> </small>
+
+                                  </div>
+                                    <div class="row pt-1">
+
+                                      <h6>Confirm Password</h6>
+
+                                      <input type="password" name="confirm_password" id="confirmpassword"   class="form-control ms-2" value=""
+                                        placeholder="Confirm Password" onkeyup='passConfirm();' />
+                                      <small id="Message" style="color:red"> </small>
+                                    </div>
+
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           </div>
-                         
-                  </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-    
-        
-      </form>
+                        </div>
+
+
+                </form>
 
 
 
@@ -102,27 +146,27 @@
 
 
 
-   
 
-          <script>
-            function displayImage(event) {
-              const imagePreview = document.getElementById('imagePreview');
-              const file = event.target.files[0];
 
-              if (file) {
-                const reader = new FileReader();
+                <script>
+                  function displayImage(event) {
+                    const imagePreview = document.getElementById('imagePreview');
+                    const file = event.target.files[0];
 
-                reader.onload = function (e) {
-                  imagePreview.src = e.target.result;
-                }
+                    if (file) {
+                      const reader = new FileReader();
 
-                reader.readAsDataURL(file);
-              } else {
-                imagePreview.src = '/image/default.png'; // Set default image
-              }
-            }
+                      reader.onload = function (e) {
+                        imagePreview.src = e.target.result;
+                      }
 
-          </script>
+                      reader.readAsDataURL(file);
+                    } else {
+                      imagePreview.src = '/image/default.png'; // Set default image
+                    }
+                  }
+
+                </script>
 </body>
 
 </html>
