edit color button

--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -41,7 +41,7 @@ text-align: right;
   padding-top: 7px;
 height: 35px;
 flex-shrink: 0;
-background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+background: #49ebd8;
 text-align-last: center;
 }
 </style>
