--- a/views/webpage.ejs
+++ b/views/webpage.ejs
@@ -38,7 +38,7 @@
   padding-top: 7px;
 height: 35px;
 flex-shrink: 0;
-background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+background: #f6d365;
 text-align-last: center;
 }
 .input-mid{
