--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -14,7 +14,7 @@
       padding-top: 7px;
     height: 35px;
     flex-shrink: 0;
-    background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+    background: #49ebd8;
     text-align-last: center;
     }</style>
 </head>
