--- a/views/profilecompany.ejs
+++ b/views/profilecompany.ejs
@@ -40,7 +40,7 @@ width: 117px;
 padding-top: 7px;
 height: 35px;
 flex-shrink: 0;
-background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+background: #f6d365;
 text-align-last: center;
 }
 .input-mid{
@@ -75,7 +75,7 @@ border-color: #007BFF; /* Change border color when focused */
           <form action="/company/updateprofile/<%= company.id_company %>" method="post" enctype="multipart/form-data">
           
               <div class="container py-5 h-100">
-                <p class="label-profile">Profile</p>      
+                <p class="label-profile"><b>Profile</b></p>      
           <div class="row">
             <div class="col-lg-4">
               <div class="card mb-4">
