--- a/views/usermanagement.ejs
+++ b/views/usermanagement.ejs
@@ -126,7 +126,7 @@
                         }
                       });
                   }
-                  </script>ุ
+                  </script>
 
 
                   <% }); %>
